--- a/styles.css
+++ b/styles.css
@@ -5,25 +5,30 @@ header {
 #user-input {
   font-family: inherit;
   display: block;
-  width: 800px;
+  width: 100%;
   height: 200px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
 }
 
 .criteria-options {
-  margin-bottom: 25px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
 }
 
 .stats-container {
   border: 1px solid red;
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
   padding: 50px;
   margin-bottom: 25px;
 }
 
 .box {
-  padding: 25px;
+  flex: 1;
+  border-radius: 9px;
+  padding: 20px;
 }
 
 .box > span {
