--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,28 @@ header {
 }
 
 #user-input {
+  background-color: hsl(240, 24%, 96%);
   font-family: inherit;
+  /* font-size: var(--text-preset-3-font-size); */
+  font-size: 20px;
   display: block;
   width: 100%;
+  padding: 1rem;
   height: 200px;
   margin-bottom: 15px;
+  border: 2px solid hsl(0, 0%, 87%);
+  border-radius: 9px;
+  /* prevents users from altering size of textarea */
+  resize: none;
+}
+
+#user-input:focus {
+  outline: none;
+  background-color: hsl(240, 26%, 92%);
+}
+
+#user-input.limit-exceeded {
+  box-shadow: 0px 0px 4px 3px var(--orange-800);
 }
 
 .criteria-options {
