--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 header {
-  margin-bottom: 5rem;
+  margin-bottom: 4.8rem;
 }
 
 header > h1 {
@@ -78,7 +78,7 @@ header > h1 {
   display: flex;
   align-items: center;
   gap: 50px;
-  margin-bottom: 40px;
+  margin-bottom: 4.8rem;
 }
 
 .criteria-options > :last-child {
@@ -105,18 +105,18 @@ header > h1 {
 
 /* ---------STATS CONTAINER-------- */
 .stats-container {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: flex;
   justify-content: space-between;
   gap: 1.5rem;
-  padding: 5rem 0;
+  /* padding: 5rem 0; */
   margin-bottom: 2.5rem;
 }
 
 .box {
   flex: 1;
   border-radius: 9px;
-  padding: 20px;
+  padding: 3rem 2rem;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right;
@@ -126,7 +126,7 @@ header > h1 {
   font-size: 6.4rem;
   font-weight: 500;
   display: inline-block;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .characters {
@@ -146,4 +146,22 @@ header > h1 {
 
 .hidden {
   visibility: hidden;
+}
+
+.letter-density-header {
+  font-size: 2.4rem;
+  margin-bottom: 2rem;
+}
+
+.letter-density-text {
+  font-size: 1.6rem;
+  font-weight: 200;
+  line-height: 1.3;
+  letter-spacing: -0.6px;
+}
+
+#myChart {
+  /* border: 1px solid purple; */
+  width: 100%;
+  height: 75rem !important;
 }
