--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ header > h1 {
 
 #user-input:focus {
   outline: none;
+  box-shadow: 0px 0px 4px 3px hsl(274, 90%, 73%);
   background-color: hsl(240, 26%, 92%);
 }
 
@@ -89,6 +90,10 @@ header > h1 {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+input[type='checkbox'] {
+  accent-color: var(--purple-500);
 }
 
 /* Set Character Limit */
